--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -37,7 +37,7 @@
             app:allowDividerBelow="true">
             <intent
                 android:action="android.intent.action.VIEW"
-                android:data="https://gitlab.com/Nekogram/wsproxy/-/blob/main/tutorial/setup.md" />
+                android:data="https://github.com/Nekogram/WSProxy/blob/main/tutorial/setup.md" />
         </Preference>
 
     </com.takisoft.preferencex.PreferenceCategory>
